clusters/k3s/infrastructure/traefik/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - traefik.erwanleboucher.dev
      secretName: traefik-dashboard-tls
  rules:
    - host: traefik.erwanleboucher.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api@internal
                port:
                  number: 8080
